# distributed-benchmarking-hosting-platform

./: .gitignore  README.md  docker-compose.yml
frontend/: index.html
frontend/src/: App.css  App.jsx  Leaderboard.jsx  Upload.jsx
infra/: kind-config.yaml
infra/helm/bot-worker/: Chart.yaml  values.yaml
infra/helm/bot-worker/templates/: deployment.yaml  service.yaml
infra/helm/fleet-manager/: values.yaml
infra/helm/frontend/: values.yaml
infra/helm/leaderboard/: values.yaml
infra/helm/telemetry/: values.yaml
infra/scripts/: bootstrap-local-topics.ps1
infra/values/: redpanda.yaml
sample-engine/: go.mod  main.go
services/bot-fleet/: Cargo.toml
services/bot-fleet/bot-worker/: Cargo.toml  Dockerfile
services/bot-fleet/bot-worker/src/: connection.rs  main.rs  metrics.rs  order_generator.rs  publishers.rs
services/bot-fleet/fleet-manager/: Cargo.toml  Dockerfile  build.rs
services/bot-fleet/fleet-manager/src/: main.rs
services/bot-fleet/proto/: fleet.proto
services/dummy-engine/: go.mod  main.go
services/leaderboard/: Dockerfile  go.mod
services/leaderboard/cmd/: main.go
services/sandbox-orchestrator/: Dockerfile  go.mod  go.sum
services/sandbox-orchestrator/cmd/: main.go
services/submission/: Dockerfile  cargo.toml  run.sh
services/submission/proto/: submission.proto
services/submission/src/: events.rs  main.rs  storage.rs
services/telemetry/: Cargo.toml  Dockerfile
services/telemetry/src/: config.rs  events.rs  hdr_wrapper.rs  kafka_consumer.rs  main.rs  metrics.rs  processor.rs  redis_sink.rs  shadow_book.rs  validation.rs
(+22 files in other folders)
