[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
hdrhistogram = "7"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
